--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
   "license": "MIT",
   "readmeFilename": "README.md",
   "devDependencies": {
-    "gulp": "^3.8.8",
-    "gulp-uglify": "^1.0.1",
-    "gulp-notify": "*",
-    "gulp-jshint": "*"
+    "gulp": "^3.9.0",
+    "gulp-uglify": "^1.2.0",
+    "gulp-notify": "^2.2.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-jshint": "^1.11.0",
+    "del": "^1.2.0"
   },
   "dependencies": {
   }
